// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectName Accepts and applies additional \`style\` prop 1`] = `
<div>
  <span
    style="color: hotpink;"
  />
</div>
`;

exports[`ObjectName should apply dimming if \`dimmed\` prop is true 1`] = `
<div>
  <span
    style="color: rgb(136, 19, 145); opacity: 0.6;"
  >
    testvalue
  </span>
</div>
`;

exports[`ObjectName should not apply dimming if \`dimmed\` prop is false 1`] = `
<div>
  <span
    style="color: rgb(136, 19, 145);"
  >
    testvalue
  </span>
</div>
`;

exports[`ObjectName should render 1`] = `
<div>
  <span
    style="color: rgb(136, 19, 145);"
  >
    testvalue
  </span>
</div>
`;
